--- a/index.html
+++ b/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <link rel="stylesheet" href="style.css">
-  </head>
+<head>
+    <link rel="stylesheet" href="css/style.css">
+</head>
 
-  <body>
+<body>
     <h1>Todo List</h1>
-    
-    <button id="displayTodosButton">Display Todos</button>
-    
-    <button id="toggleAllButton">Toggle All</button>
-  
-  <script src="src/script.js"></script>
-  </body>
+    <button onclick="handlers.displayTodos();">Display Todos</button>
+    <button onclick="handlers.toggleAll();">Toggle All</button>
+    <script src="src/script.js"></script>
+</body>
 
 </html>
