--- a/index.html
+++ b/index.html
@@ -6,10 +6,32 @@
 </head>
 
 <body>
-    <h1>Todo List</h1>
+<h1>Todo List</h1>
+<div>
     <button onclick="handlers.displayTodos();">Display Todos</button>
     <button onclick="handlers.toggleAll();">Toggle All</button>
-    <script src="src/script.js"></script>
+</div>
+
+<div>
+    <button onclick="handlers.addTodo();">Add</button>
+    <input type="text" id="addTodoTextInput">
+</div>
+
+<div>
+    <button onclick="handlers.changeTodo();">Change Todo</button>
+    <input type="number" id="changeTodoPosInput">
+    <input type="text" id="changeTodoTextInput">
+</div>
+
+<div>
+    <button onclick="handlers.deleteTodo();">Delete</button>
+    <input type="number" id="deleteTodoPosInput">
+</div>
+<div>
+    <button onclick="handlers.toggleTodo();">Toggle Todo</button>
+    <input type="number" id="toggleTodoPosInput">
+</div>
+<script src="src/script.js"></script>
 </body>
 
 </html>
